--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Форма авторизации</title>
     <!-- Google Fonts Poppins -->
@@ -31,12 +31,15 @@
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Позволяет растянуть тело на всю высоту экрана */
         }
 
         .header-container {
             background: linear-gradient(45deg, var(--color-purple), var(--color-blue));
             color: var(--color-white);
-            padding: 20px 24px;
+            padding: 12px 24px; /* уменьшена высота шапки */
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -44,8 +47,9 @@
         }
 
         .logo-container {
-            width: 100px; /* Ширина логотипа */
+            width: 150px; /* увеличен размер логотипа */
             height: auto;
+            mix-blend-mode: multiply; /* Убираем фон */
         }
 
         .header-container h1 {
@@ -57,21 +61,22 @@
         .dropdown {
             position: relative;
         }
-             .dropdown-button {
+
+        .dropdown-button {
             background-color: var(--color-blue);
             color: var(--color-white);
             border: none;
-            padding: 10px 15px;
+            padding: 12px 20px; /* увеличен размер кнопки */
             border-radius: var(--border-radius);
             cursor: pointer;
             font-weight: 600;
+            font-size: 1.25rem; /* увеличен размер шрифта */
             transition: background 0.3s ease;
-	    margin-left: 100px;
+            margin-left: 90px; /* Подвинут чуть влево */
         }
 
         .dropdown-button:hover {
             background-color: var(--color-purple);
-	    margin-left: 100px;
         }
 
         .dropdown-content {
@@ -107,6 +112,10 @@
             background-color: var(--color-white);
             border-radius: var(--border-radius);
             box-shadow: 0 4px 12px rgba(107, 114, 128, 0.15);
+            flex: 1; /* Позволяет занять оставшееся пространство */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .login-form {
@@ -114,6 +123,9 @@
             flex-direction: column;
             gap: 20px;
             color: var(--color-text-primary);
+            width: 100%;
+            max-width: 600px; /* увеличена ширина формы */
+            min-width: 350px;
         }
         .login-form h2 {
             margin: 0 0 16px 0;
@@ -138,6 +150,8 @@
             font-size: 1rem;
             transition: border-color 0.3s ease;
             color: var(--color-text-primary);
+            width: 100%;
+            box-sizing: border-box;
         }
         input[type="text"]:focus,
         input[type="password"]:focus {
@@ -157,6 +171,7 @@
             cursor: pointer;
             transition: background 0.3s ease, transform 0.2s ease;
             box-shadow: 0 4px 10px rgba(139, 92, 246, 0.6);
+            width: 100%;
         }
         button[type="submit"]:hover,
         button[type="submit"]:focus {
@@ -180,21 +195,21 @@
 </head>
 <body>
     <header class="header-container" role="banner">
-        <img src="logo.jpg" alt="Логотип сайта" class="logo-container" />
+        <img src="logo.gif" alt="Логотип сайта" class="logo-container" />
         <h1>Форма авторизации</h1>
         <div class="dropdown">
             <button class="dropdown-button">Меню</button>
             <div class="dropdown-content">
-            <a href="index.html">Главная страница</a>
+                <a href="index.html">Главная страница</a>
                 <a href="privacy.html">Политика конфиденциальности</a>
                 <a href="register.html">Форма регистрации</a>
- 	        <a href="chat.html">Чат бот</a>
+                <a href="chat.html">Чат бот</a>
             </div>
         </div>
     </header>
 
     <main class="main-container" role="main">
-        <form class="login-form" aria-label="Форма авторизации">
+        <form class="login-form" aria-label="Форма авторизации" onsubmit="showSuccessMessage(event)">
             <h2>Авторизация</h2>
             <div class="form-group">
                 <label for="username">Имя пользователя</label>
@@ -205,11 +220,21 @@
                 <input type="password" id="password" name="password" placeholder="Введите пароль" required />
             </div>
             <button type="submit">Войти</button>
+ 		<div id="success-message" style="display:none; color: green;">Вы успешно авторизованы!</div>
         </form>
     </main>
 
     <footer class="footer-container" role="contentinfo">
-        <p>подвал</p>
+        <p>Выполнили: Головков Роман, Винокуров Дмитрий, Шишмарёв Константин, Гришаков Александр</p>
+        <p>ГБПОУ ИО "АПЭТ"</p>
     </footer>
+
+    <script>
+        function showSuccessMessage(event) {
+            event.preventDefault(); // Отменяем стандартное поведение формы
+            document.getElementById('success-message').style.display = 'block'; // Отображаем сообщение
+        }
+    </script>
 </body>
 </html>
+
